--- a/05-transcriptomics_appendix.Rmd
+++ b/05-transcriptomics_appendix.Rmd
@@ -7,7 +7,7 @@ library(tibble)
 
 ## Baseline characteristics
 
-```{r baseline-statistics, fig.cap="hello"}
+```{r baseline-statistics-table}
 extensive_meta <- 
   readr::read_csv("../multiomics-ad-transcriptomics/data/RNAseq_sample_annotation(extensive).csv")
 
@@ -77,7 +77,22 @@ knitr::kable(clinic_summary_t, format = "html")
 ```
 
 ```{r}
+knitr::kable(clinic_summary_t, format = "html", caption = "Baseline characteristics of AD and HC group") %>% 
+  kableExtra::add_footnote("Age, bmi, and blood IgE were tested by t test. Gender and blood IgE > 200 (%) were tested by Fisher's exact test.")
+```
 
+
+```{r individual-data-table}
+individual_data <- 
+  baseline_data %>% arrange(subject) %>% select(-ige_200_h) %>% 
+  mutate(age = age %>% round,
+         bmi = bmi %>% round(1))
+colnames(individual_data)[3] <- "BMI"
+colnames(individual_data)[4] <- "blood_IgE"
+colnames(individual_data)[7] <- "EASI"
+colnames(individual_data)[8] <- "SCORAD"
+colnames(individual_data)[9] <- "oSCORAD"
+knitr::kable(individual_data, caption = "Baseline statistics of individual subjects")
 ```
 
 
