--- a/03-transcriptomics_data_cleaning.Rmd
+++ b/03-transcriptomics_data_cleaning.Rmd
@@ -251,7 +251,9 @@ de_v1_full %>% readr::write_rds("data/de_v1_full.rds")
 ls_gsa <- 
   as.list(ls(pattern = "^de_v1_(LS|NL)vs(NL|NN)_result$") %>% lapply(get)) %>% 
   purrr::map(function(df){
-    df <- df %>% mutate(rank = log2FoldChange * abs(padj)) %>% select(gene_name, rank) %>% 
+    df <- 
+      df %>% mutate(rank = log2FoldChange) %>% 
+      select(gene_name, rank) %>% 
       deframe()})
 names(ls_gsa) <- 
   ls(pattern = "^de_v1_(LS|NL)vs(NL|NN)_result$") %>%
@@ -291,16 +293,23 @@ names(gs_list) <- gs_name
 
 ```{r fgsea}
 gse_exp <- 
-  expand.grid(rank = ls_gsa, gs = gs_list)
+  expand.grid(rank = names(ls_gsa), gs = names(gs_list)) %>% 
+  tibble() %>% mutate(name = paste(gs, rank, sep = "_"))
 
-gse_res <- purrr::map2(gse_exp$rank[1],
-                       gse_exp$gs[1],
+gse_res <- purrr::map2(gse_exp$rank,
+                           gse_exp$gs,
             function(rank, gs){
-  fgsea::fgsea(pathways = gs, 
-               stats    = rank,
-               minSize  = 15,
-               maxSize  = 500, eps = 0) %>% 
-  filter(padj < .05) %>% arrange(-NES)
-}) 
+  gsa_stat <- fgsea::fgsea(pathways = gs_list[[gs]], 
+                           stats    = ls_gsa[[rank]],
+                           minSize  = 15,
+                           maxSize  = 500, eps = 0,
+                           BPPARAM = MulticoreParam(8)) %>% 
+    as_tibble() %>% 
+    mutate(name = paste(gs, rank, sep = "_"), gs = gs, contrast = rank) %>% 
+    filter(padj < .05)
+})
+
+names(gse_res) <- gse_exp$name
+gse_res %>% saveRDS("data/gse_res.rds")
 ```
 
