--- a/04-transcriptomics_manuscript.Rmd
+++ b/04-transcriptomics_manuscript.Rmd
@@ -652,12 +652,20 @@ variancePartition::plotVarPart(vp)
 ```
 
 ```{r vp500, eval=FALSE}
-se_vary <- se %>% keep_variable(top = 1000)
-vp_vary <- variancePartition::fitExtractVarPartModel(
-    assay(se_500, 2), 
+
+vp_vary_100_3000 <- 
+  lapply(seq(from = 100, to = 3000, by = 100), function(top_gene){
+  se_vary <- se %>% keep_variable(top = top_gene)
+  vp_vary <- variancePartition::fitExtractVarPartModel(
+    assay(se_vary, 2), 
     ~ (1|skin_type) + (1|subject) + (1|visit) + (1|gender), 
     colData(se_vary) %>% as_tibble()
     )
+  return(vp_vary)
+})
+
+
+
 variancePartition::plotVarPart(vp_vary)
 ```
 
